# turmoil-raft

./: Cargo.toml  DESIGN.md  Dockerfile  build.rs
k8s/: k8s-deployment.yaml  k8s-deployment.yaml.tmpl
proto/: kv.proto  raft.proto
repro/v16/: crash-1770606088615.json  crash-1770608116804.json  crash-1770609214506.json  crash-1770609570461.json  crash-1770609581937.json  crash-1770609687370.json  troubleshoot_gemini.md
repro/v2/crash-1777651212837464215/: README.md  config.json
repro/v22/: crash-1770646506038.json  crash-1770741544215.json  readme.md
src/: lib.rs
src/kv/: client.rs  server.rs
src/pb/: mod.rs
src/raft/: client.rs  core.rs  log.rs  mod.rs  persist.rs  rpc.rs
tests/: README.md  kv_linearizability.rs  raft_ping.rs  raft_simulation.rs  simulation_harness.rs
tests/common/: config.rs  kv_sim.rs  linearizability_oracle.rs  mod.rs  oracle.rs  raft_sim.rs
